<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio"
    android:id="@+id/drawerLayout">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_dark"
            android:textAlignment="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido1"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/holo_green_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido2"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/holo_green_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido3"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/holo_green_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido4"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/holo_green_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido5"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/holo_green_dark"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido6"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/holo_green_dark"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/menuLateral"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/holo_blue_bright"/>



</android.support.v4.widget.DrawerLayout>